<resources>
    <string name="app_name">NeWork007</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_feed">Posts</string>
    <string name="menu_events">Events</string>
    <string name="menu_users">Users</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Menu</string>
    <string name="preview_video">Video Preview</string>
    <string name="play_video">Play video</string>
    <string name="play_audio">Play audio</string>
    <string name="online">Online</string>
    <string name="event_time">Event Time</string>
    <string name="content">Content</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="add_post">Add new post</string>
    <string name="description_attach">Attach</string>
    <string name="news">Posts</string>
    <string name="events">Events</string>
    <string name="new_posts">New posts</string>
    <string name="empty_posts">There is no posts</string>
    <string name="remove">Remove</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="add_photo">Take photo</string>
    <string name="add_file">Attach file</string>
    <string name="add_users">Add users</string>
    <string name="add_geo">Add location</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <string name="offline">offline</string>
    <string name="event_date">Event date</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="avatar_user">User avatar</string>
    <string name="duration">Duration</string>
    <string name="likers">Likers</string>
    <string name="more_users">See more users</string>
    <string name="mentioned">Mentioned</string>
    <string name="transparent">Transparent</string>
    <string name="speakers">Speakers</string>
    <string name="avatar_speaker">Speaker avatar</string>
    <string name="count_likes">Likes number</string>
    <string name="participants">Participants</string>
    <string name="button_clear_job">Clear job</string>
    <string name="company_name">Company name</string>
    <string name="experience">Experience</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="enter_dates">Enter dates</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="sign_up">Sign up</string>
    <string name="description_preview">Preview</string>
    <string name="clear">Clear</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="description_choose_gallery">Pick from gallery</string>
    <string name="description_make_photo">Make photo</string>
    <string name="pick_avatar">Pick avatar</string>
    <string name="description_full_screen_image">Full screen image</string>
    <string name="post_avatar">Avatar</string>
    <string name="wall">Wall\n</string>
    <string name="jobs">Jobs</string>
    <string name="empty_jobs">No jobs</string>
    <string name="login_title">Sign in to see posts</string>
    <string name="login_button">Log in</string>
    <string name="menu_new_post">Create new post</string>
    <string name="registration">Registration</string>
    <string name="menu_new_event">Create new event</string>
    <string name="user">Users</string>
    <string name="map">Map</string>
    <string name="my_location">My location</string>
    <string name="on_picture">Image</string>
    <string name="profile">Profile</string>
    <string name="empty_field">All fields must be filled</string>
    <string name="not_confirm">Password and confirm password are not the same</string>
    <string name="missing_photo">Pick photo for profile</string>
    <string name="save">Save</string>
    <string name="new_event">New event</string>
    <string name="edit_event">Edit event</string>
    <string name="permission">Permission\n</string>
    <string name="menu_new_job">New job</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_exit">Exit</string>
</resources>