<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegistrationFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/common_spacing">

                <TextView
                    android:id="@+id/registerWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/common_spacing"
                    android:text="@string/sign_up"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <FrameLayout
                    android:id="@+id/avatar_preview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/register_avatar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/description_preview"
                        tools:srcCompat="@tools:sample/avatars" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppTheme.SubmitButton"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/clear" />

                </FrameLayout>
                <LinearLayout
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@color/design_default_color_primary">

                    <ImageView
                        android:id="@+id/gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_choose_gallery"
                        android:padding="@dimen/common_spacing"
                        app:srcCompat="@drawable/ic_pick_photo_24" />

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/description_make_photo"
                        android:padding="@dimen/common_spacing"
                        app:srcCompat="@drawable/ic_camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/pick_avatar"
                        android:text="@string/pick_avatar"
                        android:padding="@dimen/common_spacing"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:hint="@string/login"
                    android:inputType="text"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:hint="@string/name"
                    android:inputType="text" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppTheme.SubmitButton"
                    android:layout_marginTop="@dimen/common_spacing"
                    android:enabled="true"
                    android:text="@string/sign_up"
                  />
            </LinearLayout>
        </ScrollView>



    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</com.google.android.material.textfield.TextInputLayout>